# substrate-kitties

./: Cargo.toml  Design.md  README.md
runtime/: Cargo.toml
runtime/src/: kitties.rs  lib.rs  linked_item.rs
runtime/wasm/: Cargo.toml
src/: chain_spec.rs  main.rs
