[profile.release]
lto = true
panic = 'abort'
[dependencies.substrate-kitties-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-kitties-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-kitties-runtime-wasm'
version = '1.0.0'
